# search-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: Automata.md
resource/: automata-table
src/: main.c
src/bst/: bst.c  bst.h
src/collection/: word.c  word.h
src/parse/: parse.c  parse.h
src/query/: query.c  query.h
src/util/bst/: bst.c  bst.h
src/util/lllist/: lllist.c  lllist.h
src/util/llstack/: llstack.c  llstack.h
